### [project] section: 
###     see https://peps.python.org/pep-0621/
### [build-system] section: 
###     see https://peps.python.org/pep-0517/
###     see https://peps.python.org/pep-0518/
### see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "amaranth-stuff-by-sporniket"
version = "0.0.1"
description = "A curated collection of code written using the amaranth hdl"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["amaranth","amaranth-hdl","nmigen", "hdl", "fpga"]
license = {text = "LGPLv3+"}
authors = [{name="Sporniket", email="sporniket.studio@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
]
dependencies = [
    'amaranth @ git+https://github.com/amaranth-lang/amaranth@0c3ada62503359900f185a9b2d8f122b2d952013',
    'amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@91ffa38e788a691464a6873d44537eece72ef76e',
    'importlib-metadata; python_version>"3.8"',
]

[project.urls]
homepage = "https://github.com/sporniket/amaranth-stuff"
#TODO documentation = "https://readthedocs.org"
repository = "https://github.com/sporniket/amaranth-stuff"
bug-tracker = "https://github.com/sporniket/amaranth-stuff/issues"

[tool.pdm.scripts]
# --- cleaning
_clean_tons_of_files = "python3 reclean.py"
clean = { composite = [ "_clean_tons_of_files" ] }
# --- linting ---
reformat = "python3 -m black ."
# --- building ---
_build_only = "python3 -m pdm build"
_install = "python3 install.py"
make = { composite = ["_build_only","_install"] }
# --- test & coverage ---
_coverage_pytest = "python3 -m coverage run --source=amaranth_stuff --branch -m pytest"
_coverage_report = "python3 -m coverage report -m"
_coverage_html = "python3 -m coverage html"
_ci_only = { composite = ["_coverage_pytest","_coverage_report","_coverage_html"] }
ci = { composite = ["clean", "reformat", "make", "_ci_only"] }

[tool.pdm.dev-dependencies]
lint = [
    "black>=23.9.1",
]
ci = [
    "pytest>=7.4.2",
    "coverage>=7.3.2",
]
scripting = [
    "rich>=13.6.0",
]
build = [
    "pdm>=2.9.3",
    "pip>=23.2.1",
]
